Fix animation collapse plus fluide

--- a/src/components/Collapse/_Collapse.scss
+++ b/src/components/Collapse/_Collapse.scss
@@ -40,7 +40,7 @@
                        max-height: 0; 
                        overflow: hidden;                    
                        padding: 20px;
-                       transition: max-height 0.6s ease, margin-top 0.6s linear;
+                       transition: max-height 0.6s ease-in-out, margin-top 0.5s ease-in-out;
                        width: 100%;
                        z-index: -1;
                        @include mobile {font-size: 12px;
@@ -48,9 +48,9 @@
                                        }
                        &.open {margin-top: -6px;
                                max-height: 400px;
-                               transition: max-height 0.6s ease-in, margin-top 0.6s linear;                
+                               transition: max-height 0.6s ease-in-out, margin-top 0.5s ease-in-out;                
                               }
                       }
             }
-.collapse .chevron-up {transition: all 0.5s linear;}
+.collapse .chevron-up {transition: all 0.5s ease-in-out;}
 .collapse.open .chevron-up {transform: rotate(-180deg);}
